simple test changes

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	<main>
     <section class="product">
 		 <i class="fas fa-apple-alt fa-5x"></i>
-			<h2>A as in Apple</h2>
+			<h2>CHANGE</h2>
 			<p>
 				We take out fruit very seriously at ABC, that is why
        the A in ABC is for Apple. Try our new AppleBook App,
